--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile Cards</title>
-    <link rel="stylesheet" href="./profilecards.css">
+    <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
